# MLOPs2_2025_UBA

./: CriteriosAprobacion.md  README.md  pyproject.toml
MLOPS_I/clase6/hands-on/: 2-testing_API_creada.ipynb
clase1/: README.md
clase2/: README.md
clase2/Practica/: neo4j_sql.ipynb
clase3/: README.md
clase3/Practica/: GraphQL.ipynb  GraphQL_REST_API.ipynb
clase3/Practica/python-graphql-docker-tutorial/: Dockerfile  client.py  pyproject.toml
clase3/Practica/python-graphql-docker-tutorial/python-graphql-docker-tutorial/: app.py
clase4/: README.md
clase4/Practica/: gRPC_GraphQL_REST.ipynb
clase4/Practica/ml_services_comparison/client/: pyproject.toml
clase4/Practica/ml_services_comparison/graphql_service/: pyproject.toml
clase4/Practica/ml_services_comparison/grpc_service/: pyproject.toml
clase4/Practica/ml_services_comparison/rest_service/: model.pkl  pyproject.toml
clase5/: README.md
clase5/practica/: data_streaming1.ipynb  data_streaming2.ipynb
clase5/practica/streaming1/: consumer.py  docker-compose.yml  producer.py  pyproject.toml
clase5/practica/streaming1/ml_model/: simple_model.pkl  toy_model.py
clase6/practica/: Dockerfile  iris_model.joblib  iris_processed.py  iris_script.py  main.py  model.py  requirements.txt  tutorial_datalake.ipynb
clase7/practica/: Dockerfile
