[project]
name = "python-graphql-docker-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "MLsound",email = "ml.sound.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "strawberry-graphql (>=0.282.0,<0.283.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
